[#1094] docs: split tez client guide into separate file